--- a/app/views/rks-acara/rks/daftar-berita.phtml
+++ b/app/views/rks-acara/rks/daftar-berita.phtml
@@ -24,7 +24,7 @@ $this->start ('contents');
             <span aria-hidden="true" class="mdi mdi-close"></span>
         </button>
         <span class="icon mdi mdi-info-outline"></span>
-        <strong>info!</strong> Klik judul berita tender untuk melihat detail berita tender
+        <strong>info!</strong> Daftar tender yang tampil adalah tender yang telah disetujui oleh direktur dan manajer
     </div>
     <div class="panel panel-default panel-table">
         <div class="panel-body">
