--- a/app/views/rks-acara/rks/detail-berita.phtml
+++ b/app/views/rks-acara/rks/detail-berita.phtml
@@ -12,7 +12,7 @@ $this->start('style');
 $this->stop();
 $this->start('page-title');
 ?>
-    Approval Berita Tender
+    Detail Dokumen RKS Berita Tender
 <?php
 $this->stop();
 $this->start('contents');
@@ -40,7 +40,7 @@ $this->start('contents');
         <div class="panel panel-default panel-border-color panel-border-color-primary" >
             <form method="post" enctype="multipart/form-data">
                 <div class="panel-heading panel-heading-divider" >
-                    Approval Berita Tender
+                    Upload Dokumen RKS Tender
                     <span class="panel-subtitle" ><?= $tender['judul_tender'] ?></span >
                 </div >
                 <div class="panel-body" >
