--- a/app/views/base.phtml
+++ b/app/views/base.phtml
@@ -28,10 +28,14 @@
             .no-l-gutter{
                 padding-left:0px !important;
             }
+            .aside-well{
+                margin-bottom: 0px !important;
+                border-radius: 0px !important;
+            }
         </style>
     </head>
     <body>
-        <div class="be-wrapper be-fixed-sidebar">
+        <div class="be-wrapper be-fixed-sidebar <?= (isset($aside) ? 'be-aside' : '') ?>">
             <nav class="navbar navbar-default navbar-fixed-top be-top-header">
                 <div class="container-fluid">
                     <div class="navbar-header"><a href="index.html" class="navbar-brand"></a></div>
@@ -108,6 +112,9 @@
         <script src="public/assets/js/validator.min.js" type="text/javascript"></script>
         <script src="public/assets/lib/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="public/assets/lib/prettify/prettify.js" type="text/javascript"></script>
+        <script src="public/assets/lib/moment.js/moment.js" type="text/javascript"></script>
+        <script src="public/assets/lib/moment.js/locale/id.js" type="text/javascript"></script>
+        <script src="public/assets/lib/mustache/mustache.min.js" type="text/javascript"></script>
         <script type="text/javascript">
             $(document).ready(function () {
                 //initialize the javascript
@@ -115,6 +122,7 @@
 
                 //Runs prettify
                 prettyPrint();
+                moment.locale('id');
             });
         </script>
         <?= $this->section ('js') ?>
