--- a/app/views/rks-acara/acara/detail-berita.phtml
+++ b/app/views/rks-acara/acara/detail-berita.phtml
@@ -12,7 +12,7 @@ $this->start('style');
 $this->stop();
 $this->start('page-title');
 ?>
-    Approval Berita Tender
+    Detail Dokumen Berita Acara Tender
 <?php
 $this->stop();
 $this->start('contents');
@@ -25,7 +25,7 @@ $this->start('contents');
                 <div class="message">
                     <button type="button" data-dismiss="alert" aria-label="Close" class="close">
                         <span aria-hidden="true" class="mdi mdi-close"></span></button>
-                    <strong>Gagal Menyimpan!</strong> Anda belum memilih file RKS.
+                    <strong>Gagal Menyimpan!</strong> Anda belum memilih file Dokumen Berita Acara.
                 </div>
             </div>
         <?php } ?>
@@ -35,14 +35,14 @@ $this->start('contents');
                 <div class="message">
                     <button type="button" data-dismiss="alert" aria-label="Close" class="close">
                         <span aria-hidden="true" class="mdi mdi-close"></span></button>
-                    <strong>Berhasil!</strong> File RKS berhasil disimpan
+                    <strong>Berhasil!</strong> File Dokumen Berita Acara berhasil disimpan
                 </div>
             </div>
         <?php } ?>
         <div class="panel panel-default panel-border-color panel-border-color-primary">
             <form method="post" enctype="multipart/form-data">
                 <div class="panel-heading panel-heading-divider">
-                    Approval Berita Tender
+                    Upload Berita Acara Tender
                     <span class="panel-subtitle"><?= $tender['judul_tender'] ?></span>
                 </div>
                 <div class="panel-body">
@@ -237,13 +237,13 @@ $this->start('contents');
                                                     </td>
                                                     <td class="user-avatar">
                                                         <img src="public/assets/img/<?= $this->getUserUpload($dok_rks['who'])['image'] ?>" alt="Avatar">
-                                                    <span class="label label-primary">
-                                                        <?= $this->getUserUpload($dok_rks['who'])['nama'] ?>
-                                                    </span>
-                                                        Pada
-                                                    <span class="label label-default">
-                                                        <?= $this->indDateTime($dok_rks['time']) ?>
-                                                    </span>
+                                                        <span class="label label-primary">
+                                                            <?= $this->getUserUpload($dok_rks['who'])['nama'] ?>
+                                                        </span>
+                                                            Pada
+                                                        <span class="label label-default">
+                                                            <?= $this->indDateTime($dok_rks['time']) ?>
+                                                        </span>
                                                     </td>
                                                 </tr>
                                                 <tr>
